More design fix, remove borders, align colors

--- a/src/pages/admin/components/dashboard/dashboard.component.less
+++ b/src/pages/admin/components/dashboard/dashboard.component.less
@@ -2,10 +2,10 @@
 @import '../../../../../node_modules/react-resizable/css/styles.css';
 
 .widget-box {
-  @apply h-full;
+  @apply h-full rounded-md bg-midnight-900;
 }
 
 .widget-header {
-  @apply h-8;
+  @apply h-8 text-lg;
   @apply cursor-grab;
 }
