--- a/src/pages/admin/layout/side-nav.component.less
+++ b/src/pages/admin/layout/side-nav.component.less
@@ -11,13 +11,10 @@
   }
 
   .brand-block {
-    @apply py-1 pr-3 bg-midnight-800 border-midnight-400;
+    @apply py-1 pr-3;
 
     background-repeat: no-repeat;
     background-position: top;
     background-size: 100%;
-
-    border-width: 0 0 1px 0;
-    border-style: solid;
   }
 }
